--- a/Anchor.toml
+++ b/Anchor.toml
@@ -1,16 +1,16 @@
 [features]
 seeds = false
 [programs.localnet]
-coin_flip = "2WWFGRA4f81ubcjtkh112obV8brzF6nkhBCDGh7Z8hqo"
+coin_flip = "BKK5xdTQdyYsvvftniqTp4B32kcG3cYSB5peR3T8zUkR"
 [programs.devnet]
-coin_flip = "2WWFGRA4f81ubcjtkh112obV8brzF6nkhBCDGh7Z8hqo"
+coin_flip = "BKK5xdTQdyYsvvftniqTp4B32kcG3cYSB5peR3T8zUkR"
 
 [registry]
 url = "https://anchor.projectserum.com"
 
 [provider]
-cluster = "localnet"
-wallet = "/Users/mertozgun/.config/solana/id.json"
+cluster = "devnet"
+wallet = "/Users/Hoc/.config/solana/id.json"
 
 [scripts]
 test = "yarn run ts-mocha -p ./tsconfig.json -t 1000000 tests/**/*.ts"
